--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,10 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+.vs/
+.firebase/
+node_modules/
+bin/
+obj/
+*.user
