--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ dependencies:
   # Web Support helpers
   web: ^0.4.0
 
+  # For relative timestamps
+  timeago: ^3.2.2  
+  # For persisting layout preference
+  shared_preferences: ^2.2.2  
 dev_dependencies:
   flutter_test:
     sdk: flutter
